force-app/main/default/objects/Action_Log__c/Action_Log__c.object-meta.xml
<CustomObject>
    <label>Action Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Log Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>