force-app/main/default/objects/Action_Log__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Created</fullName>
            </value>
            <value>
                <fullName>Case Updated</fullName>
            </value>
            <value>
                <fullName>Work Order Created</fullName>
            </value>
            <value>
                <fullName>Work Order Assigned</fullName>
            </value>
            <value>
                <fullName>Work Order Started</fullName>
            </value>
            <value>
                <fullName>Work Order Completed</fullName>
            </value>
            <value>
                <fullName>Status Changed</fullName>
            </value>
            <value>
                <fullName>Comment Added</fullName>
            </value>
            <value>
                <fullName>Photo Uploaded</fullName>
            </value>
            <value>
                <fullName>Location Updated</fullName>
            </value>
            <value>
                <fullName>Duplicate Detected</fullName>
            </value>
            <value>
                <fullName>AI Classification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>