force-app/main/default/objects/Action_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Action Logs</relationshipLabel>
    <relationshipName>Action_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>