force-app/main/default/objects/Action_Log__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Action Logs</relationshipLabel>
    <relationshipName>Action_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>